// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ConfirmSignUp custom auth component Renders correctly 1`] = `
<div>
  <div
    class="my-4 mx-6 md:mx-0"
  >
    <div
      class="flex w-full"
    >
      <span
        class="text-2xl leading-8 font-semibold"
      >
        Fast geschafft!
      </span>
    </div>
    <div
      class="flex w-full"
    >
      <span
        class="text-base leading-6"
      >
        Nur noch einen Schritt um wirklich sicher zu gehen.
      </span>
    </div>
    <div
      class="flex w-full mt-2"
    >
      <span
        class="text-sm leading-5"
      >
        Wir haben dir einen Verifizierungscode an
         
        <strong>
          hello@60beans.com
        </strong>
         
        geschickt. Überprüfe gegebenenfalls auch deinen Spam-Ordner.
      </span>
    </div>
    <div
      class="mt-4"
    />
    <form>
      <div
        class="w-full mt-8"
      >
        <label
          class="relative"
        >
          <span
            class="absolute -top-6 left-3 px-1 bg-white"
          >
            <span
              class="text-sm leading-5"
            >
              Deine E-mail-Adresse
            </span>
          </span>
          <input
            class="w-full border rounded-full focus:outline-0 focus:ring px-4 py-2 focus:ring-primary/30"
            data-testid="username"
            placeholder="Deine E-mail-Adresse"
            type="email"
            value="hello@60beans.com"
          />
        </label>
      </div>
      <div
        class="w-full mt-8"
      >
        <label
          class="relative"
        >
          <span
            class="absolute -top-6 left-3 px-1 bg-white"
          >
            <span
              class="text-sm leading-5"
            >
              Verifizierungscode
            </span>
          </span>
          <input
            class="w-full border rounded-full focus:outline-0 focus:ring px-4 py-2 focus:ring-primary/30"
            data-testid="code"
            placeholder="Verifizierungscode"
            type="text"
            value=""
          />
        </label>
      </div>
      <div
        class="w-full mt-8"
      >
        <button
          class="flex w-full justify-center relative inline-flex flex-row items-center rounded-full border-2 px-4 py-2 text-md font-bold disabled:bg-brand-grey-whisper disabled:text-coreUI-text-secondary disabled:cursor-not-allowed text-brand-black bg-primary border-transparent hover:bg-brand-green-starship active:bg-primary pointer-events-none opacity-70 bg-coreUI-background-images !border-coreUI-background-images text-coreUI-text-secondary"
          data-testid="submit"
          disabled=""
          role="button"
          type="submit"
        >
          Verifizieren
        </button>
      </div>
      <div
        class="w-full mt-8"
      >
        <span
          class="text-xs leading-4"
        >
          Du hast noch keinen Code erhalten?
        </span>
        <div
          class="flex w-fit border-b cursor-pointer text-xs leading-4 font-semibold"
        >
          <a
            data-testid="resend"
          >
            Bitte noch einmal senden.
          </a>
        </div>
      </div>
      <div
        class="mt-10"
      >
        <div
          class="flex"
        >
          <div
            class="border-t border-brand-grey-whisper absolute w-full left-0"
          />
        </div>
        <div
          class="mt-4 mb-4 text-xl leading-7 font-semibold"
        >
          Du hast bereits ein Konto?
        </div>
        <button
          class="flex w-full justify-center relative inline-flex flex-row items-center rounded-full border-2 px-4 py-2 text-md font-bold text-brand-black bg-white border-brand-black hover:border-coreUI-text-tertiary active:border-brand-black"
          data-testid="goToSignInLink"
          role="button"
          type="button"
        >
          Anmelden
        </button>
      </div>
    </form>
    <div
      class="mt-12"
    >
      <div
        class="flex"
      >
        <div
          class="border-t border-brand-grey-whisper absolute w-full left-0"
        />
      </div>
      <div
        class="w-full mt-4 flex justify-center"
      >
        <a
          href="//www.notion.so/Datenschutzhinweise-ad5b45261a964166a74883d2770e28ea"
          target="_blank"
        >
          <div
            class="font-normal border-b text-xs leading-4"
          >
            Datenschutz-Bestimmungen
          </div>
        </a>
        <a
          class="ml-10"
          href="//slender-petunia-c3c.notion.site/Imprint-33b18fd9e469471ab768eef8155da968"
          target="_blank"
        >
          <div
            class="font-normal border-b text-xs leading-4"
          >
            Impressum
          </div>
        </a>
      </div>
    </div>
  </div>
</div>
`;

exports[`ConfirmSignUp custom auth component The new registration code request with missing email is handled 1`] = `
<div>
  <div
    class="my-4 mx-6 md:mx-0"
  >
    <div
      class="flex w-full"
    >
      <span
        class="text-2xl leading-8 font-semibold"
      >
        Fast geschafft!
      </span>
    </div>
    <div
      class="flex w-full"
    >
      <span
        class="text-base leading-6"
      >
        Nur noch einen Schritt um wirklich sicher zu gehen.
      </span>
    </div>
    <div
      class="flex w-full mt-2"
    >
      <span
        class="text-sm leading-5"
      >
        Wir haben dir einen Verifizierungscode per E-mail geschickt. Überprüfe gegebenenfalls auch deinen Spam-Ordner.
      </span>
    </div>
    <div
      class="mt-4"
    />
    <form>
      <div
        class="w-full mt-8"
      >
        <label
          class="relative"
        >
          <span
            class="absolute -top-6 left-3 px-1 bg-white"
          >
            <span
              class="text-sm leading-5"
            >
              Deine E-mail-Adresse
            </span>
          </span>
          <input
            class="w-full border rounded-full focus:outline-0 focus:ring px-4 py-2 focus:ring-primary/30"
            data-testid="username"
            placeholder="Deine E-mail-Adresse"
            type="email"
            value=""
          />
        </label>
      </div>
      <div
        class="w-full mt-8"
      >
        <label
          class="relative"
        >
          <span
            class="absolute -top-6 left-3 px-1 bg-white"
          >
            <span
              class="text-sm leading-5"
            >
              Verifizierungscode
            </span>
          </span>
          <input
            class="w-full border rounded-full focus:outline-0 focus:ring px-4 py-2 focus:ring-primary/30"
            data-testid="code"
            placeholder="Verifizierungscode"
            type="text"
            value=""
          />
        </label>
      </div>
      <div
        class="w-full mt-8"
      >
        <button
          class="flex w-full justify-center relative inline-flex flex-row items-center rounded-full border-2 px-4 py-2 text-md font-bold disabled:bg-brand-grey-whisper disabled:text-coreUI-text-secondary disabled:cursor-not-allowed text-brand-black bg-primary border-transparent hover:bg-brand-green-starship active:bg-primary pointer-events-none opacity-70 bg-coreUI-background-images !border-coreUI-background-images text-coreUI-text-secondary"
          data-testid="submit"
          disabled=""
          role="button"
          type="submit"
        >
          Verifizieren
        </button>
      </div>
      <div
        class="w-full mt-8"
      >
        <span
          class="text-xs leading-4"
        >
          Du hast noch keinen Code erhalten?
        </span>
        <div
          class="flex w-fit border-b cursor-pointer text-xs leading-4 font-semibold"
        >
          <a
            data-testid="resend"
          >
            Bitte noch einmal senden.
          </a>
        </div>
      </div>
      <div
        class="mt-10"
      >
        <div
          class="flex"
        >
          <div
            class="border-t border-brand-grey-whisper absolute w-full left-0"
          />
        </div>
        <div
          class="mt-4 mb-4 text-xl leading-7 font-semibold"
        >
          Du hast bereits ein Konto?
        </div>
        <button
          class="flex w-full justify-center relative inline-flex flex-row items-center rounded-full border-2 px-4 py-2 text-md font-bold text-brand-black bg-white border-brand-black hover:border-coreUI-text-tertiary active:border-brand-black"
          data-testid="goToSignInLink"
          role="button"
          type="button"
        >
          Anmelden
        </button>
      </div>
    </form>
    <div
      class="mt-12"
    >
      <div
        class="flex"
      >
        <div
          class="border-t border-brand-grey-whisper absolute w-full left-0"
        />
      </div>
      <div
        class="w-full mt-4 flex justify-center"
      >
        <a
          href="//www.notion.so/Datenschutzhinweise-ad5b45261a964166a74883d2770e28ea"
          target="_blank"
        >
          <div
            class="font-normal border-b text-xs leading-4"
          >
            Datenschutz-Bestimmungen
          </div>
        </a>
        <a
          class="ml-10"
          href="//slender-petunia-c3c.notion.site/Imprint-33b18fd9e469471ab768eef8155da968"
          target="_blank"
        >
          <div
            class="font-normal border-b text-xs leading-4"
          >
            Impressum
          </div>
        </a>
      </div>
    </div>
  </div>
</div>
`;
